Fix for crash on Mac when we don't have an mWidget, bug 83155 Browser crashes when trying to load html parameter test on mac, r=bnesse sr=waterson